--- a/doc-manager-ui/src/pages/sidepanel.css
+++ b/doc-manager-ui/src/pages/sidepanel.css
@@ -1,15 +1,44 @@
 /* sidepanel.css */
 .side-panel {
-  width: 400px; /* 1/4 of the screen */
-  background-color: #333;
+  width: 400px;
+  background: linear-gradient(145deg, #041526, #061e36, #092349); 
   color: #ffffff;
   padding: 20px;
   position: fixed;
-  height: 100vh;
+  height: 95vh;
   transition: left 0.3s ease;
   z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; /* Space out content */
 }
 
-.side-panel.open {
-  left: 0; /* Move the panel to visible position */
+.side-panel h2 {
+  margin-top: 0;
+}
+
+/* Navigation Bar */
+.side-panel-nav {
+  display: flex;
+  justify-content: space-around; /* Distribute items evenly */
+  
+  padding: 10px 0;
+  bottom: 0; /* Stick to the bottom of the panel */
+  flex-shrink: 0; /* Prevent shrinking */
+}
+
+
+.nav-item {
+  color: #ffffff;
+  font-size: 16px;
+  text-align: center;
+  cursor: pointer;
+  transition: color 0.3s ease;
+  width: 250px;
+  height: 50px; 
+}
+
+.nav-item:hover {
+  color: #92afbb; /* Change to a lighter blue on hover */
+  background-color: rgba(255, 255, 255, 0.079);
 }
