--- a/doc-manager-ui/src/pages/chatbot.css
+++ b/doc-manager-ui/src/pages/chatbot.css
@@ -2,7 +2,7 @@
 .dim {
   position: absolute;
   top: 0;
-  left: 440;
+  left: 480;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
@@ -53,11 +53,13 @@
   display: flex;
   height: 100vh;
   background-color: #f5f5f5; /* Light background for the whole app */
-  margin-left: 436px;
+  margin-left: 210px;
 }
 
 .chat-container {
-  flex: 3; /* Take up 3/4 of the page */
+   /* flex: 3;Take up 3/4 of the page */
+  flex: 1;
+  flex-grow: 1;
   background: linear-gradient(145deg, #3a5977, #88a0bb, #d5e0f7);
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -79,7 +81,7 @@
 
 .chat-history {
   flex-grow: 1;
-  padding: 20px;
+  padding: 40px;
   overflow-y: auto;
   max-height: 700px;
   color: white;
@@ -92,8 +94,9 @@
   display: flex;
   flex-direction: column; /* Ensures messages are stacked vertically */
   padding: 10px;
+  /*margin: 20px 20px;*/
   border-radius: 10px;
-  max-width: 60%;  /* Ensures the message container stays within a specific width */
+  max-width: 100%;  /* Ensures the message container stays within a specific width */
   margin-bottom: 10px;
   animation: fadeInUp 0.5s ease both;
   word-break: break-word; /* Force long words to break and wrap within the container */
@@ -104,42 +107,50 @@
 
 .message.bot {
   background-color: rgba(255, 255, 255, 0.4); /* Light glassy color for bot messages */
-  color: #ffffff;
+  color: #000000;
   align-self: flex-start;
 }
 
 .message.user {
   background-color: rgba(255, 255, 255, 0.2); /* Navy blue for user messages */
-  color: #ffffff;
+  color: #000000;
   align-self: flex-end;
 }
 
 .input-container {
   display: flex;
-  padding: 10px;
+
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(10px);
+  border-color: rgba(10, 37, 86, 0.8) ;
   border-bottom-left-radius: 12px;
   border-bottom-right-radius: 12px;
+
+  padding: 0px 40px 0px 40px;
 }
 
 .text-input {
   flex-grow: 1;
   padding: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.3);
+  border: 3px solid  rgba(10, 37, 86, 0.5) ;
   background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 5px;
-  color: white;
+  border-radius: 8px;
+  color: black;
+  margin: 10px 10px 10px 0px;
 }
 
 .send-button {
-  padding: 10px 20px;
+  width: 100px;
+  padding: 10px 10px;
   background-color: rgba(10, 37, 86, 0.8);
   color: #ffffff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  margin: 10px 0px 10px 0px;
+  font-weight: bold;
+  
 }
 
 .send-button:hover {
@@ -161,7 +172,7 @@
 
 .display-button {
   padding: 6px 12px;  /* Reduced padding for a smaller button */
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(10, 37, 86, 0.8);
   color: #ffffff;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 8px;  /* Less rounded corners */
@@ -172,5 +183,10 @@
 }
 
 .display-button:hover{
-  background-color:rgba(255, 255, 255, 0.133);
+  background-color:rgba(0, 120, 212, 0.8);
+}
+
+.pdfLabel{
+  color: #ffffff;
+  font-weight: bold;
 }
